--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,29 +2,32 @@
   "manifest_version": 3,
   "name": "YouTube Music Tracker",
   "version": "1.0",
-  "description": "Track the music played on YouTube Music",
+  "description": "Tracks currently playing songs on YouTube Music",
   "permissions": [
-    "storage"
+    "storage",
+    "activeTab"
   ],
-  "host_permissions": [
-    "*://*.youtube.com/*",
-    "http://localhost:4444/*"
-  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
   "content_scripts": [
     {
       "matches": [
-        "*://*.youtube.com/*"
+        "*://music.youtube.com/*"
       ],
       "js": [
         "content.js"
       ]
     }
   ],
-  "action": {
-    "default_icon": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
-    }
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
